WP-Implementation/mysql-deployment-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: NOMBREDEMIWP-mysql
  namespace: wordpress-NOMBREDEMIWP
  labels:
    app: NOMBREDEMIWP
spec:
  ports:
    - port: 3306
  selector:
    app: NOMBREDEMIWP
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NOMBREDEMIWP-mysql
  namespace: wordpress-NOMBREDEMIWP
  labels:
    app: NOMBREDEMIWP
spec:
  selector:
    matchLabels:
      app: NOMBREDEMIWP
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: NOMBREDEMIWP
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
