WP-Implementation/wordpress-deployment-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: NOMBREDEMIWP
  namespace: wordpress-NOMBREDEMIWP
  labels:
    app: NOMBREDEMIWP
spec:
  ports:
    - port: 80
  selector:
    app: NOMBREDEMIWP
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NOMBREDEMIWP
  namespace: wordpress-NOMBREDEMIWP
  labels:
    app: NOMBREDEMIWP
spec:
  selector:
    matchLabels:
      app: NOMBREDEMIWP
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: NOMBREDEMIWP
        tier: frontend
    spec:
      containers:
      - image: IMAGENPERSONALIZADAWP
        name: NOMBREDEMIWP
        ports:
        - containerPort: 80
          name: NOMBREDEMIWP
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
