WP-Implementation/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress-NOMBREDEMIWP
  namespace: wordpress-NOMBREDEMIWP
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: MIWEB.COM #DOMINIO DE TU WEB
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: NOMBREDEMIWP
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: NOMBREDEMIWP
            port:
              number: 80
